# ttf2pcx

./: .gitignore  CMakeLists.txt  README.md  TTF2PCX.html  TTF2PCX.js  emrunadapter.js  index.html  qwasmjsruntime.js
.github/workflows/: cd.yml  gh-pages.yml
src/: character.cpp  character.h  mainwindow.cpp  mainwindow.h  previewwidget.cpp  previewwidget.h
